# genivi-navi-yelp-client

./: CMakeLists.txt  InfoPanel.cpp  InfoPanelLabel.cpp  MainApp.cpp  MainApp.h  README.md  config.xml.in  main.cpp  yelp-client.qrc
